adicionei a base da meta três e alterei algumas coisas

--- a/meta3/Makefile
+++ b/meta3/Makefile
@@ -3,14 +3,15 @@ FILENAME1 = gocompiler.l
 FILENAME2 = gocompiler.y
 FILENAME3 = struct.c
 FILENAME4 = struct.h
-FILENAME5 = semantic_analysis.c
-FILENAME6 = semantic_analysis.h
+FILENAME5 = semantics.c
+FILENAME6 = semantics.h
 
 exe: ${FILENAME1} ${FILENAME2} ${FILENAME3} ${FILENAME4}
 	lex ${FILENAME1}
 	yacc -y -d -t -v -Wno-yacc ${FILENAME2}
-	cc -o ${EXE} -ggdb3 y.tab.c lex.yy.c ${FILENAME3}
-	valgrind --leak-check=full --show-leak-kinds=all --log-file="valgrind.txt" -s ./${EXE} -t < testes/errors.dgo 
+	cc -o ${EXE} -ggdb3 y.tab.c lex.yy.c ${FILENAME3} ${FILENAME5}
+	./${EXE} -t < testes/errors.dgo > output.out
+	#valgrind --leak-check=full --show-leak-kinds=all --log-file="valgrind.txt" -s ./${EXE} -t < testes/errors.dgo > output.out
 clear:
 	rm -rf *${EXE}
 	rm -f ${EXE}.zip
